--- a/src/index.css
+++ b/src/index.css
@@ -37,6 +37,9 @@ p {
   padding: 0;
   margin: 0;
 }
+abbr {
+  text-decoration: none;
+}
 
 ::-webkit-scrollbar {
   width: 0px;
@@ -93,6 +96,7 @@ p {
 /* TodoList */
 
 .item {
+  cursor: pointer;
   display: flex;
   padding: 1rem 0;
   justify-content: space-between;
@@ -127,6 +131,13 @@ p {
   margin: auto auto auto 0;
   text-align: left;
   padding-right: 3rem;
+}
+
+.todo-name p {
+  text-overflow: ellipsis;
+  max-width: 15rem;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 .item-completed .todo-name p {
